# sudman

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/sudman/: __init__.py  cli.py  formatters.py  interactive.py  manager.py  utils.py
tests/: __init__.py  test_cli.py  test_formatters.py  test_manager.py
