[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudman"
version = "0.2.0"
description = "Systemd User Daemon Manager - A user-friendly interface for systemd user units"
readme = "README.md"
authors = [
    {name = "Sudman Contributors", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["systemd", "linux", "cli", "utility"]
dependencies = [
    "click>=8.0.0",
    "curses-menu>=0.0.0; sys_platform != 'win32'"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.scripts]
sudman = "sudman.cli:main"

[project.urls]
"Homepage" = "https://github.com/SANTHOSH-SACHIN/sudman"
"Bug Tracker" = "https://github.com/yourusername/SANTHOSH-SACHIN/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
